--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ click==8.1.3
 cryptography==40.0.2
 Deprecated==1.2.13
 Flask==2.2.3
+Flask-Injector==0.14.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 gcloud==0.18.3
 googleapis-common-protos==1.59.0
 httplib2==0.22.0
 idna==3.4
+injector==0.20.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jwcrypto==1.4.2
