--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.10.3
+CacheControl==0.12.11
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -9,8 +11,8 @@ Flask==2.2.3
 Flask-Injector==0.14.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
-gcloud==0.18.3
-googleapis-common-protos==1.59.0
+grpcio==1.53.0
+grpcio-status==1.53.0
 httplib2==0.22.0
 idna==3.4
 injector==0.20.1
@@ -19,13 +21,16 @@ Jinja2==3.1.2
 jwcrypto==1.4.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+msgpack==1.0.5
 oauth2client==4.1.3
+proto-plus==1.22.2
 protobuf==4.22.3
 psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pycryptodome==3.17
+PyJWT==2.6.0
 pyparsing==3.0.9
 Pyrebase4==4.6.0
 python-dotenv==1.0.0
@@ -36,6 +41,7 @@ rsa==4.9
 six==1.16.0
 SQLAlchemy==2.0.9
 typing_extensions==4.5.0
+uritemplate==4.1.1
 urllib3==1.26.15
 Werkzeug==2.2.3
 wrapt==1.15.0
